glitches fixed only thing needed should be randomizing answers

--- a/README
+++ b/README
@@ -19,4 +19,7 @@ index.html
 
 
 How the trivia game works: 
+    choose a topic
+    you can click on a button, but the answer is not checked until you press the next button in case you change your mind 
+    
 
